# PowerGrid-BoardGame

./: CMakeLists.txt  City.cpp  City.h  MainPractice.cpp  Main_PowerGrid_Driver.cpp  Phase1.cpp  Player.cpp  Player.h  README.md  ResourceMarket.cpp  ResourceMarket.h  mainwindow.cpp  mainwindow.h  test.cpp
DesignPatterns/Observer/: Game.cpp  Game.h  Observer.cpp  Observer.h  Player.cpp  Player.h  Subject.cpp  Subject.h
Documents/Concordia/COMP 345 Adavanced C++/Assignment 2/COMP345Team21-master/: CMakeLists.txt  Main_Driver_Powergrid_Part3.cpp
Documents/Concordia/COMP 345 Adavanced C++/Assignment 2/COMP345Team21-master/FileReader/: FileReader.h
Documents/Concordia/COMP 345 Adavanced C++/Assignment 2/COMP345Team21-master/Map/: Map.h
Documents/Concordia/COMP 345 Adavanced C++/Assignment 2/COMP345Team21-master/MapFiles/: mapFile.txt
Documents/Concordia/COMP 345 Adavanced C++/Assignment 2/COMP345Team21-master/Powerplant/Card/: Step13.cpp  Summary.cpp
Documents/Concordia/COMP 345 Adavanced C++/Assignment 2/COMP345Team21-master/Powerplant/GameAndPlayer/: Game.cpp  Game.h  Player.cpp  Player.h
Documents/Concordia/COMP 345 Adavanced C++/Assignment 2/COMP345Team21-master/Powerplant/Market/: PowerplantMarket.h
File Reader/: FileReader.cpp  FileReader.h  MapLoader.cpp  MapLoader.h
FileReader/: FileReader.cpp  FileReader.h  MapLoader.cpp  MapLoader.h  MapLoaderB.cpp  MapLoaderB.h  file  mapFile.txt
Map/: Edge.cpp  Edge.h  Map.cpp  Map.h  Vertex.cpp  Vertex.h  filereader.cpp  mapfile.txt
MapFiles/: file  mapFile.txt  test2.txt
Powerplant/: CMakeLists.txt  City.cpp  City.h  Houses.cpp  Houses.h  Market.h  Phase1.cpp  Player.cpp  Player.h  Powerplant.cpp  Powerplant.h  Resource.cpp  Resource.h  main.cpp  newMain.cpp
Powerplant/Card/: Card.cpp  Card.h  Deck.cpp  Deck.h  Powerplant.cpp  Powerplant.h  Step13.cpp  Step13.h  Summary.cpp  Summary.h
Powerplant/GameAndPlayer/: Game.cpp  Game.h  Observer.cpp  Observer.h  Player.cpp  Player.h  Subject.cpp  Subject.h
Powerplant/HousesAndCities/: City.cpp  City.h  Houses.cpp  Houses.h
Powerplant/Market/: Market.cpp  Market.h  PowerplantMarket.cpp  PowerplantMarket.h  ResourceMarket.cpp  ResourceMarket.h
Powerplant/Resource/: Resource.cpp  Resource.h
Strategy/: Aggressive.cpp  Aggressive.h  Environmentalist.cpp  Environmentalist.h  Moderate.cpp  Moderate.h  Normal.cpp  Normal.h  Strategy.cpp  Strategy.h
untitled/: CMakeLists.txt  Main_PowerGrid_Driver.cpp  README.md  test.cpp
untitled/FileReader/: FileReader.cpp
untitled/Map/: Map.h  Vertex.h
untitled/Powerplant/Card/: Card.h  Deck.cpp  Powerplant.cpp  Powerplant.h  Step13.h
untitled/Powerplant/GameAndPlayer/: Game.cpp  Player.cpp  Player.h
untitled/Powerplant/Market/: PowerplantMarket.cpp  PowerplantMarket.h  ResourceMarket.cpp  ResourceMarket.h
