cmake_minimum_required(VERSION 3.13)
project(COMP345Team21)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(cmake-build-debug/COMP345Team21_autogen)
include_directories(cmake-build-debug/COMP345Team21_autogen/include)
include_directories(FileReader)
include_directories(Map)
include_directories(Powerplant/Card)
include_directories(Powerplant/GameAndPlayer)
include_directories(Powerplant/Market)
include_directories(Strategy)

add_executable(COMP345Team21
        cmake-build-debug/COMP345Team21_autogen/BCPV7IRI3O/moc_Runner.cpp
        cmake-build-debug/COMP345Team21_autogen/EWIEGA46WW/moc_mainwindow.cpp
        cmake-build-debug/COMP345Team21_autogen/include/ui_mainwindow.h
        cmake-build-debug/COMP345Team21_autogen/KRKR4BN5RM/moc_mainwindow.cpp
        cmake-build-debug/COMP345Team21_autogen/moc_predefs.h
        cmake-build-debug/COMP345Team21_autogen/mocs_compilation.cpp
        FileReader/FileReader.cpp
        FileReader/FileReader.h
        FileReader/MapLoader.cpp
        FileReader/MapLoader.h
        Map/Edge.cpp
        Map/Edge.h
        Map/Map.cpp
        Map/Map.h
        Map/Vertex.cpp
        Map/Vertex.h
        Powerplant/Card/Card.cpp
        Powerplant/Card/Card.h
        Powerplant/Card/Deck.cpp
        Powerplant/Card/Deck.h
        Powerplant/Card/Powerplant.cpp
        Powerplant/Card/Powerplant.h
        Powerplant/Card/Step13.cpp
        Powerplant/Card/Step13.h
        Powerplant/Card/Summary.cpp
        Powerplant/Card/Summary.h
        Powerplant/GameAndPlayer/Game.cpp
        Powerplant/GameAndPlayer/Game.h
        Powerplant/GameAndPlayer/Observer.cpp
        Powerplant/GameAndPlayer/Observer.h
        Powerplant/GameAndPlayer/Player.cpp
        Powerplant/GameAndPlayer/Player.h
        Powerplant/GameAndPlayer/Subject.cpp
        Powerplant/GameAndPlayer/Subject.h
        Powerplant/Market/PowerplantMarket.cpp
        Powerplant/Market/PowerplantMarket.h
        Powerplant/Market/ResourceMarket.cpp
        Powerplant/Market/ResourceMarket.h
        Strategy/Aggressive.cpp
        Strategy/Aggressive.h
        Strategy/Environmentalist.cpp
        Strategy/Environmentalist.h
        Strategy/Moderate.cpp
        Strategy/Moderate.h
        Strategy/Normal.cpp
        Strategy/Normal.h
        Strategy/Strategy.h
        Main_PowerGrid_Driver.cpp
        mainwindow.cpp
        mainwindow.h)
